--- a/templates/courses.html
+++ b/templates/courses.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
-{% block content %}
-	<h1>Courses</h1>
-{% endblock content %}
+<title>Courses</title>
+{% block body %}
+<h1>Courses</h1>
+{% endblock body %}
